Ticket #1571 (closed defect: fixed)

Opened 2 weeks ago

Last modified 1 week ago

"option daemon does not exist" at exit

Reported by: courmisch Assigned to: courmisch
Priority: low Milestone: 0.9.0 bugs
Component: LibVLC Version: master
Severity: minor Keywords:
Cc: Platform(s): all
Difficulty: unknown Work status: 20%

Description

If starting VLC from the command line with at least one invalid option, the following error is printed while exiting:

[00000001] main libvlc error: option daemon does not exist

I have not traced this yet. Probably coming from the pid file removal code in libvlc_InternalDestroy.

Change History

05/07/08 16:58:43 changed by courmisch

  • status changed from new to assigned.
  • owner set to courmisch.
  • milestone changed from Bugs paradize to 0.9.0 bugs.

05/07/08 16:58:57 changed by courmisch

  • status changed from assigned to closed.
  • resolution set to fixed.